versions/v4.2.0/doxygen/html/topics.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/doxygen/html/topics.html
original_path: doxygen/html/topics.html
---

| Logo | Zephyr API Documentation 4.2.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Topics

Here is a list of all topics with brief descriptions:

[detail level 12345]

| [Audio](group__audio__interface.md) |  |
| --- | --- |
| [Audio Codec Interface](group__audio__codec__interface.md) | Abstraction for audio codecs |
| [Digital Microphone Interface](group__audio__dmic__interface.md) | Abstraction for digital microphones |
| [MIDI2 Universal MIDI Packet definitions](group__midi__ump.md) | Universal MIDI Packet definitions |
| [MIDI commands](group__midi__ump__cmd.md) |  |
| [Message types](group__midi__ump__mt.md) |  |
| [System common and System Real Time message status](group__midi__ump__sys.md) |  |
| [Connectivity](group__connectivity.md) | Connectivity |
| [Bluetooth APIs](group__bluetooth.md) | Bluetooth APIs |
| [Attribute Protocol (ATT)](group__bt__att.md) | Attribute Protocol (ATT) |
| [Audio Input Control Service (AICS)](group__bt__aics.md) | Audio Input Control Service (AICS) |
| [Basic Audio Profile (BAP) LC3 Presets](group__bt__bap__lc3__preset.md) | Basic Audio Profile (BAP) LC3 Presets |
| [Battery Service (BAS)](group__bt__bas.md) | Battery Service (BAS) |
| [BlueNRG HCI driver extended API](group__bluenrg__hci__driver.md) | BlueNRG HCI Driver-Specific API |
| [Bluetooth Audio](group__bt__audio.md) | Bluetooth Audio |
| [Assigned numbers to string API](group__bt__audio__to__str.md) | Assigned numbers to string API |
| [Codec capability parsing APIs](group__bt__audio__codec__cap.md) | Audio codec capabilities APIs |
| [Codec config parsing APIs](group__bt__audio__codec__cfg.md) | Audio codec Config APIs |
| [Bluetooth Basic Audio Profile](group__bt__bap.md) | Bluetooth Basic Audio Profile (BAP) |
| [BAP Broadcast APIs](group__bt__bap__broadcast.md) | BAP Broadcast APIs |
| [BAP Broadcast Sink APIs](group__bt__bap__broadcast__sink.md) | BAP Broadcast Sink APIs |
| [BAP Broadcast Source APIs](group__bt__bap__broadcast__source.md) | BAP Broadcast Source APIs |
| [BAP Broadcast Sink APIs](group__bt__bap__broadcast__sink.md) | BAP Broadcast Sink APIs |
| [BAP Broadcast Source APIs](group__bt__bap__broadcast__source.md) | BAP Broadcast Source APIs |
| [BAP Unicast Client APIs](group__bt__bap__unicast__client.md) |  |
| [BAP Unicast Server APIs](group__bt__bap__unicast__server.md) |  |
| [Bluetooth Content Control Identifier](group__bt__ccid.md) | Bluetooth Content Control Identifier (CCID) |
| [Bluetooth Controller](group__bt__ctrl.md) | Bluetooth Controller |
| [Bluetooth Gaming Audio Profile](group__bt__gmap.md) | Bluetooth Gaming Audio Profile (GMAP) |
| [Bluetooth HCI APIs](group__bt__hci__api.md) | Bluetooth HCI APIs |
| [Bluetooth LC3 codec](group__bt__lc3.md) | LC3 |
| [Bluetooth Mesh](group__bt__mesh.md) | Bluetooth Mesh |
| [Access layer](group__bt__mesh__access.md) | Access layer |
| [Bluetooth Mesh BLOB Transfer Client model API](group__bt__mesh__blob__cli.md) |  |
| [Bluetooth Mesh BLOB Transfer Server model API](group__bt__mesh__blob__srv.md) |  |
| [Bluetooth Mesh BLOB flash stream](group__bt__mesh__blob__io__flash.md) |  |
| [Bluetooth Mesh BLOB model API](group__bt__mesh__blob.md) |  |
| [Bluetooth Mesh Device Firmware Update](group__bt__mesh__dfu.md) |  |
| [Bluetooth Mesh Device Firmware Update (DFU) metadata](group__bt__mesh__dfu__metadata.md) | Common types and functions for the Bluetooth Mesh DFU metadata |
| [Firmware Update Server model](group__bt__mesh__dfu__srv.md) | API for the Bluetooth Mesh Firmware Update Server model |
| [Firmware Uppdate Client model](group__bt__mesh__dfu__cli.md) | API for the Bluetooth Mesh Firmware Update Client model |
| [Bluetooth Mesh On-Demand Private GATT Proxy Client](group__bt__mesh__od__priv__proxy__cli.md) |  |
| [Bluetooth Mesh On-Demand Private GATT Proxy Server](group__bt__mesh__od__priv__proxy__srv.md) |  |
| [Bluetooth Mesh Private Beacon Client](group__bt__mesh__priv__beacon__cli.md) |  |
| [Bluetooth Mesh Private Beacon Server](group__bt__mesh__priv__beacon__srv.md) |  |
| [Bluetooth Mesh SAR Configuration Client Model](group__bt__mesh__sar__cfg__cli.md) | Bluetooth Mesh |
| [Bluetooth Mesh SAR Configuration Server Model](group__bt__mesh__sar__cfg__srv.md) | Bluetooth Mesh |
| [Bluetooth Mesh Solicitation PDU RPL Client](group__bt__mesh__sol__pdu__rpl__cli.md) |  |
| [Bluetooth Mesh Solicitation PDU RPL Server](group__bt__mesh__sol__pdu__rpl__srv.md) |  |
| [Bridge Configuration Client Model](group__bt__mesh__brg__cfg__cli.md) | API for the Bluetooth Mesh Bridge Configuration Client model |
| [Bridge Configuration Server Model](group__bt__mesh__brg__cfg__srv.md) | API for the Bluetooth Mesh Bridge Configuration Server model |
| [Bridge Configuration common header](group__bt__mesh__brg__cfg.md) |  |
| [Configuration Client Model](group__bt__mesh__cfg__cli.md) | Configuration Client Model |
| [Configuration Server Model](group__bt__mesh__cfg__srv.md) | Configuration Server Model |
| [Firmware Distribution models](group__bt__mesh__dfd.md) |  |
| [Firmware Distribution Server model](group__bt__mesh__dfd__srv.md) | API for the Firmware Distribution Server model |
| [Health Client Model](group__bt__mesh__health__cli.md) | Health Client Model |
| [Health Server Model](group__bt__mesh__health__srv.md) | Health Server Model |
| [Health faults](group__bt__mesh__health__faults.md) | List of specification defined Health fault values |
| [Heartbeat](group__bt__mesh__heartbeat.md) | Heartbeat |
| [Large Composition Data Client model](group__bt__mesh__large__comp__data__cli.md) |  |
| [Large Composition Data Server model](group__bt__mesh__large__comp__data__srv.md) |  |
| [Message](group__bt__mesh__msg.md) | Message |
| [Opcodes Aggregator Client model](group__bt__mesh__op__agg__cli.md) |  |
| [Opcodes Aggregator Server model](group__bt__mesh__op__agg__srv.md) |  |
| [Provisioning](group__bt__mesh__prov.md) | Provisioning |
| [Proxy](group__bt__mesh__proxy.md) | Proxy |
| [Remote Provisioning Client model](group__bt__mesh__rpr__cli.md) |  |
| [Remote Provisioning models](group__bt__mesh__rpr.md) |  |
| [Remote provisioning server](group__bt__mesh__rpr__srv.md) |  |
| [Runtime Configuration](group__bt__mesh__cfg.md) | Runtime Configuration |
| [Application Configuration](group__bt__mesh__cfg__app.md) | Application Configuration |
| [Subnet Configuration](group__bt__mesh__cfg__subnet.md) | Subnet Configuration |
| [SAR Configuration common header](group__bt__mesh__sar__cfg.md) |  |
| [Statistic](group__bt__mesh__stat.md) | Statistic |
| [Byteorder](group__bt__byteorder.md) | Byteorder |
| [Call Control Profile (CCP)](group__bt__ccp.md) | Call Control Profile (CCP) |
| [CCP Call Control Client APIs](group__bt__ccp__call__control__client.md) |  |
| [CCP Call Control Server APIs](group__bt__ccp__call__control__server.md) |  |
| [Channel Sounding (CS)](group__bt__le__cs.md) | LE Channel Sounding (CS) |
| [Common Audio Profile (CAP)](group__bt__cap.md) | Common Audio Profile (CAP) |
| [Connection management](group__bt__conn.md) | Connection management |
| [Coordinated Set Identification Profile (CSIP)](group__bt__csip.md) | Coordinated Set Identification Profile (CSIP) |
| [Cryptography](group__bt__crypto.md) | Cryptography |
| [Current Time Service (CTS)](group__bt__cts.md) | Current Time Service (CTS) |
| [Data buffers](group__bt__buf.md) | Data buffers |
| [Device Address](group__bt__addr.md) | Bluetooth device address definitions and utilities |
| [Encrypted Advertising Data (EAD)](group__bt__ead.md) | Encrypted Advertising Data (EAD) |
| [Gaming Audio Profile (GMAP) LC3 Presets](group__bt__gmap__lc3__preset.md) | Gaming Audio Profile (GMAP) LC3 Presets |
| [Generic Access Profile (GAP)](group__bt__gap.md) | Generic Access Profile (GAP) |
| [Defines and Assigned Numbers](group__bt__gap__defines.md) | Bluetooth Generic Access Profile defines and Assigned Numbers |
| [Generic Attribute Profile (GATT)](group__bt__gatt.md) | Generic Attribute Profile (GATT) |
| [GATT Client APIs](group__bt__gatt__client.md) |  |
| [GATT Server APIs](group__bt__gatt__server.md) |  |
| [HCI RAW channel](group__hci__raw.md) | HCI RAW channel |
| [Hands Free Profile (HFP)](group__bt__hfp.md) | Hands Free Profile (HFP) |
| [Hands Free Profile - Audio Gateway (HFP-AG)](group__bt__hfp__ag.md) | Hands Free Profile - Audio Gateway (HFP-AG) |
| [Hearing Access Service (HAS)](group__bt__has.md) | Hearing Access Service (HAS) |
| [Heart Rate Service (HRS)](group__bt__hrs.md) | Heart Rate Service (HRS) |
| [Immediate Alert Service (IAS)](group__bt__ias.md) | Immediate Alert Service (IAS) |
| [Isochronous channels (ISO)](group__bt__iso.md) | Isochronous channels (ISO) |
| [L2CAP](group__bt__l2cap.md) | L2CAP |
| [Media Control Client (MCC)](group__bt__mcc.md) | Bluetooth Media Control Client (MCC) interface |
| [Media Control Service (MCS)](group__bt__mcs.md) | Media Control Service (MCS) |
| [Media Proxy](group__bt__media__proxy.md) | Media proxy module |
| [Microphone Control Profile (MICP)](group__bt__micp.md) | Microphone Control Profile (MICP) |
| [Object Transfer Service (OTS)](group__bt__ots.md) | Object Transfer Service (OTS) |
| [Public Broadcast Profile (PBP)](group__bt__pbp.md) | Public Broadcast Profile (PBP) |
| [Published Audio Capabilities Service (PACS)](group__bt__pacs.md) | Published Audio Capabilities Service (PACS) |
| [RFCOMM](group__bt__rfcomm.md) | RFCOMM |
| [Service Discovery Protocol (SDP)](group__bt__sdp.md) |  |
| [Telephone Bearer Service (TBS)](group__bt__tbs.md) | Telephone Bearer Service (TBS) |
| [Telephone and Media Audio Profile (TMAP)](group__bt__tmap.md) | Telephone and Media Audio Profile (TMAP) |
| [UUIDs](group__bt__uuid.md) | UUIDs |
| [Volume Control Profile (VCP)](group__bt__vcp.md) | Volume Control Profile (VCP) |
| [Volume Offset Control Service (VOCS)](group__bt__vocs.md) | Volume Offset Control Service (VOCS) |
| [CAN ISO-TP Protocol](group__can__isotp.md) | CAN ISO-TP Protocol |
| [IEEE 802.15.4 and Thread APIs](group__ieee802154.md) | IEEE 802.15.4 native and OpenThread L2, configuration, management and driver APIs |
| [IEEE 802.15.4 Drivers](group__ieee802154__driver.md) | IEEE 802.15.4 driver API |
| [IEEE 802.15.4 L2](group__ieee802154__l2.md) | IEEE 802.15.4 L2 APIs |
| [IEEE 802.15.4 Net Management](group__ieee802154__mgmt.md) | IEEE 802.15.4 net management library |
| [OpenThread stack](group__openthread.md) | OpenThread stack public header |
| [LoRaWAN APIs](group__lorawan__api.md) |  |
| [Modem APIs](group__modem.md) | Modem APIs |
| [Modem CMUX](group__modem__cmux.md) | Modem CMUX |
| [Modem PPP](group__modem__ppp.md) | Modem PPP |
| [Modem Pipe](group__modem__pipe.md) | Modem Pipe |
| [Modem Ubx](group__modem__ubx.md) | Modem Ubx |
| [Modem pipelink](group__modem__pipelink.md) | Modem pipelink |
| [Networking](group__networking.md) | Networking |
| [Application network context](group__net__context.md) | Application network context |
| [BSD Sockets compatible API](group__bsd__sockets.md) | BSD Sockets compatible API |
| [Socket options for TLS](group__secure__sockets__options.md) |  |
| [BSD socket service API](group__bsd__socket__service.md) | BSD socket service API |
| [COAP Library](group__coap.md) | COAP library |
| [CoAP Manager Events](group__coap__mgmt.md) | CoAP Manager Events |
| [CoAP client API](group__coap__client.md) | CoAP client API |
| [CoAP service API](group__coap__service.md) | CoAP Service API |
| [Connection Manager API](group__conn__mgr.md) | Connection Manager API |
| [Connection Manager Connectivity API](group__conn__mgr__connectivity.md) | Connection Manager Connectivity API |
| [Connection Manager Connectivity Bulk API](group__conn__mgr__connectivity__bulk.md) | Connection Manager Bulk API |
| [Connection Manager Connectivity Implementation API](group__conn__mgr__connectivity__impl.md) | Connection Manager Connectivity Implementation API |
| [DHCPv4](group__dhcpv4.md) | DHCPv4 |
| [DHCPv4 server](group__dhcpv4__server.md) | DHCPv4 server |
| [DHCPv6](group__dhcpv6.md) | DHCPv6 |
| [DNS Resolve Library](group__dns__resolve.md) | DNS resolving library |
| [DNS Service Discovery](group__dns__sd.md) | DNS Service Discovery |
| [Distributed Switch Architecture (DSA)](group__dsa__core.md) | Distributed Switch Architecture (DSA) |
| [Distributed Switch Architecture definitions and helpers](group__DSA.md) | DSA definitions and helpers |
| [Dummy L2/driver Support Functions](group__dummy.md) | Dummy L2/driver support functions |
| [Ethernet Bridging API](group__eth__bridge.md) | Ethernet Bridging API |
| [Ethernet Library](group__ethernet__mgmt.md) | Ethernet library |
| [Ethernet PHY Interface](group__ethernet__phy.md) | Ethernet PHY Interface |
| [Ethernet Support Functions](group__ethernet.md) | Ethernet support functions |
| [Ethernet MII Support Functions](group__ethernet__mii.md) | Ethernet MII (media independent interface) functions |
| [IEEE 802.3 management interface](group__ethernet__mdio.md) | Definitions for IEEE 802.3 management interface |
| [HTTP HPACK](group__http__hpack.md) | HTTP HPACK |
| [HTTP client API](group__http__client.md) | HTTP client API |
| [HTTP request methods](group__http__methods.md) | HTTP request methods |
| [HTTP response status codes](group__http__status__codes.md) | HTTP response status codes |
| [HTTP server API](group__http__server.md) |  |
| [HTTP service API](group__http__service.md) |  |
| [IGMP API](group__igmp.md) | IGMP (Internet Group Management Protocol) |
| [IPv4/IPv6 primitives and helpers](group__ip__4__6.md) | IPv4/IPv6 primitives and helpers |
| [Link Layer Discovery Protocol definitions and helpers](group__lldp.md) | LLDP definitions and helpers |
| [LwM2M high-level API](group__lwm2m__api.md) |  |
| [LwM2M path helper macros](group__lwm2m__path__helpers.md) |  |
| [MQTT Client library](group__mqtt__socket.md) |  |
| [MQTT-SN Client library](group__mqtt__sn__socket.md) |  |
| [Multicast Listener Discovery API](group__mld.md) | MLD (Multicast Listener Discovery) |
| [Network Configuration Library](group__net__config.md) | Network configuration library |
| [Network Core Library](group__net__core.md) | Network core library |
| [Network Hostname Library](group__net__hostname.md) | Network hostname configuration library |
| [Network Interface abstraction layer](group__net__if.md) | Network Interface abstraction layer |
| [Network L2 Abstraction Layer](group__net__l2.md) | Network Layer 2 abstraction layer |
| [Network Link Address Library](group__net__linkaddr.md) | Network link address library |
| [Network Management](group__net__mgmt.md) | Network Management |
| [Network Offloading Interface](group__net__offload.md) | Network offloading interface |
| [Network Packet Filter API](group__net__pkt__filter.md) | Network Packet Filter API |
| [Basic Filter Conditions](group__npf__basic__cond.md) |  |
| [Ethernet Filter Conditions](group__npf__eth__cond.md) |  |
| [Network Packet Library](group__net__pkt.md) | Network packet management library |
| [Network Statistics Library](group__net__stats.md) | Network statistics library |
| [Network long timeout primitives and helpers](group__net__timeout.md) | Network long timeout primitives and helpers |
| [Network packet capture](group__net__capture.md) | Network packet capture support functions |
| [Network time representation.](group__net__time.md) |  |
| [Offloaded Net Devices](group__offloaded__netdev.md) | Offloaded Net Devices |
| [PPP L2/driver Support Functions](group__ppp.md) | Point-to-point (PPP) L2/driver support functions |
| [PTP support](group__ptp.md) | Precision Time Protocol (PTP) support |
| [PTP time](group__ptp__time.md) | Precision Time Protocol time specification |
| [Prometheus API](group__prometheus.md) |  |
| [Promiscuous mode](group__promiscuous.md) | Promiscuous mode support |
| [SNTP](group__sntp.md) | Simple Network Time Protocol API |
| [Send and receive IPv4 or IPv6 ICMP Echo Request messages.](group__icmp.md) |  |
| [Socket NET\_MGMT library](group__socket__net__mgmt.md) | Socket NET\_MGMT library |
| [SocketCAN library](group__socket__can.md) | SocketCAN library |
| [TFTP Client library](group__tftp__client.md) |  |
| [TLS credentials management](group__tls__credentials.md) | TLS credentials management |
| [Trickle Algorithm Library](group__trickle.md) | Trickle algorithm library |
| [Virtual Interface Library](group__virtual__mgmt.md) | Virtual interface library |
| [Virtual LAN definitions and helpers](group__vlan__api.md) | VLAN definitions and helpers |
| [Virtual Network Interface Support Functions](group__virtual.md) | Virtual network interface support functions |
| [Websocket API](group__websocket.md) | Websocket API |
| [Wi-Fi Management](group__wifi__mgmt.md) | Wi-Fi Management API |
| [Wi-Fi Network Manager API](group__wifi__nm.md) | Wi-Fi Network manager API |
| [Wi-Fi credentials library](group__wifi__credentials.md) | Library that provides a way to store and load Wi-Fi credentials |
| [Zperf API](group__zperf.md) |  |
| [gPTP support](group__gptp.md) | Generic Precision Time Protocol (gPTP) support |
| [USB](group__usb.md) | USB |
| [Buffer macros and definitions used in USB device support](group__udc__buf.md) | Buffer macros and definitions used in USB device support |
| [USB Audio Class 2 device API](group__uac2__device.md) | USB Audio Class 2 device API |
| [USB BOS support](group__usb__bos.md) | USB Binary Device Object Store support |
| [USB DFU device update API](group__usbd__dfu.md) | USB DFU device update API |
| [USB HID class API](group__usb__hid__class.md) | Usb\_hid.h API |
| [HID class USB specific definitions](group__usb__hid__device__api.md) |  |
| [USB HID common definitions](group__usb__hid__definitions.md) | Hid.h API |
| [Mouse and keyboard report descriptors](group__usb__hid__mk__report__desc.md) |  |
| [USB HID Item helpers](group__usb__hid__items.md) |  |
| [USB Host Core API](group__usb__host__core__api.md) | USB HOST Core Layer API |
| [USB MIDI 2.0 Class device API](group__usbd__midi2.md) | USB MIDI 2.0 class device API |
| [USB Mass Storage Class device API](group__usbd__msc__device.md) | USB Mass Storage Class device API |
| [USB Video Class (UVC) device API](group__usbd__uvc.md) | USB Video Class (UVC) device API |
| [USB device core API](group__usbd__api.md) | New USB device stack core API |
| [USB device core API](group__usbd__msg__api.md) |  |
| [USBD HID device API](group__usbd__hid__device.md) | USBD HID Device API |
| [Device Driver APIs](group__io__interfaces.md) | Device Driver APIs |
| [1-Wire Interface](group__w1__interface.md) | 1-Wire Interface |
| [1-Wire Sensor API](group__w1__sensor.md) | 1-Wire Sensor API |
| [1-Wire data link layer](group__w1__data__link.md) | 1-Wire data link layer |
| [1-Wire network layer](group__w1__network.md) | 1-Wire network layer |
| [ADC driver APIs](group__adc__interface.md) | ADC driver APIs |
| [Emulated ADC](group__adc__emul.md) | Emulated ADC backend API |
| [Analog axis API](group__input__analog__axis.md) | Analog axis API |
| [BBRAM Interface](group__bbram__interface.md) | BBRAM Interface |
| [BBRAM emulator backend API](group__bbram__emulator__backend.md) | BBRAM emulator backend API |
| [BC1.2 backed emulator APIs](group__b12__emulator__backend.md) | BC1.2 backend emulator APIs |
| [BC1.2 driver APIs](group__b12__interface.md) | BC1.2 driver APIs |
| [CAN Interface](group__can__interface.md) | CAN Interface |
| [CAN Transceiver](group__can__transceiver.md) | CAN Transceiver Driver APIs |
| [Cache Controller Interface](group__cache__arch__interface.md) | Cache Controller Interface |
| [Cellular Interface](group__cellular__interface.md) | Cellular interface |
| [Charger Interface](group__charger__interface.md) | Charger Interface |
| [Clock Control Interface](group__clock__control__interface.md) | Clock Control Interface |
| [LiteX Clock Control driver interface](group__clock__control__litex__interface.md) | LiteX Clock Control driver interface |
| [Comparator Interface](group__comparator__interface.md) | Comparator Interface |
| [Coredump pseudo-device driver APIs](group__coredump__device__interface.md) | Coredump pseudo-device driver APIs |
| [Counter Interface](group__counter__interface.md) | Counter Interface |
| [DAC driver APIs](group__dac__interface.md) | DAC driver APIs |
| [DAI Interface](group__dai__interface.md) | DAI Interface |
| [DMA Interface](group__dma__interface.md) | DMA Interface |
| [Disk Driver Interface](group__disk__driver__interface.md) | Disk Driver Interface |
| [Display Interface](group__display__interface.md) | Display Interface |
| [LCD Interface](group__lcd__interface.md) | LCD Interface |
| [EC Host Command Interface](group__ec__host__cmd__interface.md) | EC Host Command Interface |
| [EDAC API](group__edac.md) |  |
| [EEPROM Interface](group__eeprom__interface.md) | EEPROM Interface |
| [ESPI Driver APIs](group__espi__interface.md) | ESPI Driver APIs |
| [Entropy Interface](group__entropy__interface.md) | Entropy Interface |
| [External Cache Controller Interface](group__cache__external__interface.md) | External Cache Controller Interface |
| [FLASH Interface](group__flash__interface.md) | FLASH Interface |
| [FLASH internal Interface](group__flash__internal__interface.md) | FLASH internal Interface |
| [Fuel Gauge Interface](group__fuel__gauge__interface.md) | Fuel Gauge Interface |
| [Fuel gauge backend emulator APIs](group__fuel__gauge__emulator__backend.md) | Fuel gauge backend emulator APIs |
| [GNSS Interface](group__gnss__interface.md) | GNSS Interface |
| [GPIO Driver APIs](group__gpio__interface.md) | GPIO Driver APIs |
| [Emulated GPIO](group__gpio__emul.md) | Emulated GPIO backend API |
| [MAX32-specific GPIO Flags](group__gpio__interface__max32.md) | MAX32-specific GPIO Flags |
| [nPM13xx-specific GPIO Flags](group__gpio__interface__npm13xx.md) | NPM13xx-specific GPIO Flags |
| [nPM2100-specific GPIO Flags](group__gpio__interface__npm2100.md) | NPM2100-specific GPIO Flags |
| [nPM6001-specific GPIO Flags](group__gpio__interface__npm6001.md) | NPM6001-specific GPIO Flags |
| [nRF-specific GPIO Flags](group__gpio__interface__nrf.md) | NRF-specific GPIO Flags |
| [HW spinlock Interface](group__hwspinlock__interface.md) | HW spinlock Interface |
| [Haptics Interface](group__haptics__interface.md) | Haptics Interface |
| [Hardware Info Interface](group__hwinfo__interface.md) | Hardware Information Interface |
| [I2C EEPROM Target Driver API](group__i2c__eeprom__target__api.md) | I2C EEPROM Target Driver API |
| [I2C Interface](group__i2c__interface.md) | I2C Interface |
| [I2S Interface](group__i2s__interface.md) | I2S (Inter-IC Sound) Interface |
| [I3C Interface](group__i3c__interface.md) | I3C Interface |
| [I3C Address-related Helper Code](group__i3c__addresses.md) | I3C Address-related Helper Code |
| [I3C Common Command Codes](group__i3c__ccc.md) | I3C Common Command Codes |
| [I3C Devicetree related bits](group__i3c__devicetree.md) | I3C Devicetree related bits |
| [I3C HDR DDR API](group__i3c__hdr__ddr.md) | I3C HDR DDR API |
| [I3C In-Band Interrupts](group__i3c__ibi.md) | I3C In-Band Interrupts |
| [I3C Target Device API](group__i3c__target__device.md) | I3C Target Device API |
| [I3C Transfer API](group__i3c__transfer__api.md) | I3C Transfer API |
| [IPM Interface](group__ipm__interface.md) | IPM Interface |
| [Input Interface](group__input__interface.md) | Input Interface |
| [Input Event Definitions](group__input__events.md) |  |
| [Inter-VM Shared Memory (ivshmem) reference API](group__ivshmem.md) | Inter-VM Shared Memory (ivshmem) reference API |
| [Keyboard Matrix API](group__input__kbd__matrix.md) | Keyboard Matrix API |
| [LED Interface](group__led__interface.md) | LED Interface |
| [LED Strip Interface](group__led__strip__interface.md) | LED Strip Interface |
| [LoRa APIs](group__lora__api.md) |  |
| [MBOX Interface](group__mbox__interface.md) | MBOX Interface |
| [MDIO Interface](group__mdio__interface.md) | MDIO Interface |
| [MIPI Display interface](group__mipi__interface.md) | MIPI Display definitions |
| [MIPI-DBI driver APIs](group__mipi__dbi__interface.md) | MIPI-DBI driver APIs |
| [MIPI-DSI driver APIs](group__mipi__dsi__interface.md) | MIPI-DSI driver APIs |
| [MODBUS](group__modbus.md) | MODBUS transport protocol API |
| [MSPI Devicetree related macros](group__mspi__devicetree.md) | MSPI Devicetree related macros |
| [MSPI Driver APIs](group__mspi__interface.md) | MSPI Driver APIs |
| [MSPI Configure API](group__mspi__configure__api.md) | MSPI Configure API |
| [MSPI Transfer API](group__mspi__transfer__api.md) | MSPI Transfer API |
| [MSPI callback API](group__mspi__callback__api.md) | MSPI callback API |
| [Mspi\_util](group__mspi__util.md) |  |
| [Miscellaneous Drivers APIs](group__misc__interfaces.md) | Miscellaneous Drivers APIs |
| [Coresight STMESP interface](group__stmsp__interface.md) | Coresight STMESP (STM Extended Stimulus Port) Interface |
| [Devmux Driver APIs](group__demux__interface.md) | Devmux Driver APIs |
| [FT8xx driver APIs](group__ft8xx__interface.md) | FT8xx driver public APIs |
| [FT8xx co-processor](group__ft8xx__copro.md) | FT8xx co-processor engine functions |
| [FT8xx common functions](group__ft8xx__common.md) | FT8xx functions to write and read memory |
| [FT8xx display list](group__ft8xx__dl.md) | FT8xx display list commands |
| [FT8xx memory map](group__ft8xx__memory.md) | FT8xx memory addresses |
| [FT8xx reference API](group__ft8xx__reference__api.md) | FT8xx reference API |
| [Renesas ELC driver APIs](group__renesas__elc__interface.md) | Renesas ELC driver public APIs |
| [Multi Function Device Drivers APIs](group__mfd__interfaces.md) | Multi Function Device Drivers APIs |
| [MFD AD559X interface](group__mdf__interface__ad559x.md) |  |
| [MFD AXP192 interface](group__mdf__interface__axp192.md) | Pins of AXP192 support several different functions |
| [MFD BD8LB600FS interface](group__mdf__interface__bd8lb600fs.md) |  |
| [MFD MAX22017 interface](group__mdf__interface__max22017.md) |  |
| [MFD NPM13XX Interface](group__mfd__interface__npm13xx.md) |  |
| [MFD NPM2100 Interface](group__mdf__interface__npm2100.md) |  |
| [PCI Express Controller Interface](group__pcie__controller__interface.md) | PCI Express Controller Interface |
| [PCIe Host Interface](group__pcie__host__interface.md) | PCIe Host Interface |
| [PCIe Capabilities](group__pcie__capabilities.md) |  |
| [PCIe Host MSI Interface](group__pcie__host__msi__interface.md) | PCIe Host MSI Interface |
| [PCIe Host PTM Interface](group__pcie__host__ptm__interface.md) | PCIe Host PTM Interface |
| [PCIe Virtual Channel Host Interface](group__pcie__vc__host__interface.md) | PCIe Virtual Channel Host Interface |
| [PECI Interface](group__peci__interface.md) | PECI Interface 3.0 |
| [PS/2 Driver APIs](group__ps2__interface.md) | PS/2 Driver APIs |
| [PSI5 Interface](group__psi5__interface.md) | PSI5 Interface |
| [PWM Interface](group__pwm__interface.md) | PWM Interface |
| [Pin Controller Interface](group__pinctrl__interface.md) | Pin Controller Interface |
| [Dynamic Pin Control](group__pinctrl__interface__dynamic.md) |  |
| [RTC DS3231 Interface](group__rtc__ds3231__interface.md) | RTC DS3231 Driver-Specific API |
| [RTC Interface](group__rtc__interface.md) | RTC Interface |
| [Regulator Interface](group__regulator__interface.md) | Regulator Interface |
| [ADP5360 Devicetree helpers.](group__regulator__adp5360.md) |  |
| [AXP192 Devicetree helpers.](group__regulator__axp192.md) |  |
| [Devicetree helpers](group__regulator__nxp__vref.md) |  |
| [MAX20335 Devicetree helpers.](group__regulator__max20335.md) |  |
| [NPM1100 Devicetree helpers.](group__regulator__npm1100.md) |  |
| [NPM2100 Devicetree helpers.](group__regulator__npm2100.md) |  |
| [NPM6001 Devicetree helpers.](group__regulator__npm6001.md) |  |
| [Regulator Parent Interface](group__regulator__parent__interface.md) | Regulator Parent Interface |
| [PCA9420 Utilities.](group__regulator__parent__pca9420.md) |  |
| [Silabs DCDC devicetree helpers.](group__regulator__silabs__dcdc.md) |  |
| [nPM13xx Devicetree helpers.](group__regulator__npm13xx.md) |  |
| [nRF5X regulator devicetree helpers.](group__regulator__nrf5x.md) |  |
| [Reset Controller Interface](group__reset__controller__interface.md) | Reset Controller Interface |
| [Retained memory driver interface](group__retained__mem__interface.md) | Retained memory driver interface |
| [SDHC interface](group__sdhc__interface.md) | SDHC interface |
| [SENT Interface](group__sent__interface.md) | SENT Interface |
| [SMBus Interface](group__smbus__interface.md) | SMBus Interface |
| [SPI Interface](group__spi__interface.md) | SPI Interface |
| [SYSCON Interface](group__syscon__interface.md) | SYSCON Interface |
| [Sensor Interface](group__sensor__interface.md) | Sensor Interface |
| [ADXL345 DT Options](group__adxl345.md) |  |
| [Output Rate options](group__adxl345__odr.md) |  |
| [ADXL362 DT Options](group__adxl362.md) |  |
| [FIFO mode options](group__adxl362__fifo__mode.md) |  |
| [ADXL367 DT Options](group__adxl367.md) |  |
| [FIFO mode options](group__adxl367__fifo__mode.md) |  |
| [ADXL372 DT Options](group__adxl372.md) |  |
| [FIFO mode options](group__ADXL372__FIFO__MODE.md) |  |
| [Battery APIs](group__battery__apis.md) | Battery API |
| [Invensense (TDK) ICM42688 DT Options](group__icm42688.md) |  |
| [Accelerometer data rate options](group__icm42688__accel__data__rate.md) |  |
| [Accelerometer power modes](group__icm42688__accel__power__modes.md) |  |
| [Accelerometer scale options](group__icm42688__accel__scale.md) |  |
| [Gyroscope data rate options](group__icm42688__gyro__data__rate.md) |  |
| [Gyroscope power modes](group__icm42688__gyro__power__modes.md) |  |
| [Gyroscope scale options](group__icm42688__gyro__scale.md) |  |
| [Invensense (TDK) ICM45686 DT Options](group__ICM45686.md) |  |
| [Accelerometer Low-pass Filtering options](group__ICM45686__ACCEL__LPF.md) |  |
| [Accelerometer data rate options](group__ICM45686__ACCEL__DATA__RATE.md) |  |
| [Accelerometer power modes](group__ICM45686__ACCEL__POWER__MODES.md) |  |
| [Accelerometer scale options](group__ICM45686__ACCEL__SCALE.md) |  |
| [Gyroscope Low-pass Filtering options](group__ICM45686__GYRO__LPF.md) |  |
| [Gyroscope data rate options](group__ICM45686__GYRO__DATA__RATE.md) |  |
| [Gyroscope power modes](group__ICM45686__GYRO__POWER__MODES.md) |  |
| [Gyroscope scale options](group__ICM45686__GYRO__SCALE.md) |  |
| [Memsic DT Options](group__mc3419.md) |  |
| [Lowe pass filter configurations](group__mc3419__lpf__configs.md) |  |
| [decimate sampling rate by provided rate](group__mc3419__decimation__rates.md) |  |
| [PNI DT Options](group__RM3100.md) |  |
| [Output data rate options](group__RM3100__ODR.md) |  |
| [Sensor axis alignment DT Options](group__sensor__axis__align.md) |  |
| [Axis description for sensor alignment](group__sensor__axis__align__index__dt.md) |  |
| [Axis description for sensor alignment](group__sensor__axis__align__dt.md) |  |
| [Texas Instruments (TI) TMP114 DT Options](group__tmp114.md) |  |
| [Temperature output data rate](group__tmp114__odr.md) |  |
| [Texas Instruments (TI) TMP11X DT Options](group__tmp11x.md) |  |
| [Temperature average sample count](group__tmp11x__os.md) |  |
| [Temperature output data rate](group__tmp11x__odr.md) |  |
| [Sensor emulator backend API](group__sensor__emulator__backend.md) | Sensor emulator backend API |
| [Stepper Driver Interface](group__stepper__interface.md) | Stepper Driver Interface |
| [Trinamic Stepper Controller Interface](group__trinamic__stepper__interface.md) | Trinamic Stepper Controller Interface |
| [TEE Interface](group__tee__interface.md) | Trusted Execution Environment Interface |
| [Text Display Interface](group__auxdisplay__interface.md) | Auxiliary (Text) Display Interface |
| [Time-aware GPIO Interface](group__tgpio__interface.md) | Time-aware GPIO Interface |
| [Touchscreen Event Report API](group__touch__events.md) | Touch Events API |
| [UART Interface](group__uart__interface.md) | UART Interface |
| [Async UART API](group__uart__async.md) |  |
| [Interrupt-driven UART API](group__uart__interrupt.md) |  |
| [Polling UART API](group__uart__polling.md) |  |
| [USB Power Delivery](group__usb__power__delivery.md) | USB Power Delivery |
| [USB Type-C](group__usb__type__c.md) | USB Type-C |
| [USB Type-C Port Controller API](group__usb__type__c__port__controller__api.md) | USB Type-C Port Controller API |
| [USB device controller driver API](group__udc__api.md) | New USB device controller (UDC) driver API |
| [USB host controller driver API](group__uhc__api.md) | USB host controller (UHC) driver API |
| [USB-C VBUS API](group__usbc__vbus__api.md) | USB-C VBUS API |
| [Video Controls](group__video__controls.md) | Video controls |
| [Video Interface](group__video__interface.md) | Video Interface |
| [Video pixel formats](group__video__pixel__formats.md) | The '|' characters separate the pixels or logical blocks, and spaces separate the bytes |
| [Virtio Interface](group__virtio__interface.md) | Virtio Interface |
| [Virtqueue Interface](group__virtqueue__interface.md) | Virtqueue Interface |
| [Watchdog Interface](group__watchdog__interface.md) | Watchdog Interface |
| [Device Model](group__device__model.md) | Device Model |
| [Device memory-mapped IO management](group__device-mmio.md) | Definitions and helper macros for managing driver memory-mapped input/output (MMIO) regions appropriately in either RAM or ROM |
| [Named MMIO region macros](group__device-mmio-named.md) | For drivers which need to manage multiple MMIO regions, which will be referenced by name |
| [Single MMIO region macros](group__device-mmio-single.md) | For drivers which need to manage just one MMIO region, the most common case |
| [Top-level MMIO region macros](group__device-mmio-toplevel.md) | For drivers which do not use Zephyr's driver model and do not associate struct device with a driver instance |
| [Devicetree](group__devicetree.md) | Devicetree.h API |
| ["For-each" macros](group__devicetree-generic-foreach.md) | IMPORTANT: you can't use the DT for-each macros in their own expansions |
| [Bus helpers](group__devicetree-generic-bus.md) |  |
| [Chosen nodes](group__devicetree-generic-chosen.md) |  |
| [Dependency tracking](group__devicetree-dep-ord.md) |  |
| [Devicetree CAN API](group__devicetree-can.md) |  |
| [Devicetree Clocks API](group__devicetree-clocks.md) |  |
| [Devicetree DMA API](group__devicetree-dmas.md) |  |
| [Devicetree Display API](group__devicetree-display.md) |  |
| [Devicetree Fixed Partition API](group__devicetree-fixed-partition.md) |  |
| [Devicetree GPIO API](group__devicetree-gpio.md) |  |
| [Devicetree IO Channels API](group__devicetree-io-channels.md) |  |
| [Devicetree Interrupt Controller API](group__devicetree-interrupt__controller.md) |  |
| [Devicetree MBOX API](group__devicetree-mbox.md) |  |
| [Devicetree PWMs API](group__devicetree-pwms.md) |  |
| [Devicetree Port Endpoint API](group__devicetree-port-endpoint.md) |  |
| [Devicetree Reset Controller API](group__devicetree-reset-controller.md) |  |
| [Devicetree SPI API](group__devicetree-spi.md) |  |
| [Existence checks](group__devicetree-generic-exist.md) |  |
| [Instance-based devicetree APIs](group__devicetree-inst.md) |  |
| [Node identifiers and helpers](group__devicetree-generic-id.md) |  |
| [Pin control](group__devicetree-pinctrl.md) |  |
| [Property accessors](group__devicetree-generic-prop.md) |  |
| [Vendor and model name helpers](group__devicetree-generic-vendor.md) |  |
| [interrupts property](group__devicetree-interrupts-prop.md) |  |
| [ranges property](group__devicetree-ranges-prop.md) |  |
| [reg property](group__devicetree-reg-prop.md) |  |
| [Error numbers](group__system__errno.md) | System error numbers Error codes returned by functions |
| [Internal and System API](group__internal__api.md) | Internal and System API |
| [Architecture Interface](group__arch-interface.md) | Internal kernel APIs with public scope |
| [Architecture thread APIs](group__arch-threads.md) |  |
| [Architecture timing APIs](group__arch-timing.md) |  |
| [Architecture-specific IRQ APIs](group__arch-irq.md) |  |
| [Architecture-specific SMP APIs](group__arch-smp.md) |  |
| [Architecture-specific Stack Walk APIs](group__arch-stackwalk.md) | Architecture-specific Stack Walk APIs |
| [Architecture-specific Thread Local Storage APIs](group__arch-tls.md) |  |
| [Architecture-specific core dump APIs](group__arch-coredump.md) |  |
| [Architecture-specific gdbstub APIs](group__arch-gdbstub.md) |  |
| [Architecture-specific memory-mapping APIs](group__arch-mmu.md) |  |
| [Architecture-specific power management APIs](group__arch-pm.md) |  |
| [Architecture-specific userspace APIs](group__arch-userspace.md) |  |
| [Miscellaneous architecture APIs](group__arch-misc.md) |  |
| [Xtensa APIs](group__xtensa__apis.md) |  |
| [Xtensa Internal APIs](group__xtensa__internal__apis.md) |  |
| [Xtensa Memory Management Unit (MMU) APIs](group__xtensa__mmu__apis.md) |  |
| [Xtensa Memory Protection Unit (MPU) APIs](group__xtensa__mpu__apis.md) |  |
| [Kernel Memory Management Internal APIs](group__kernel__mm__internal__apis.md) |  |
| [User Mode Internal APIs](group__usermode__internal__apis.md) |  |
| [User mode and Syscall APIs](group__syscall__apis.md) | User mode and Syscall APIs |
| [Kernel APIs](group__kernel__apis.md) | Kernel APIs |
| [Async polling APIs](group__poll__apis.md) | An API to wait concurrently for any one of multiple conditions to be fulfilled |
| [Atomic Services APIs](group__atomic__apis.md) |  |
| [Barrier Services APIs](group__barrier__apis.md) |  |
| [CPU Idling APIs](group__cpu__idle__apis.md) |  |
| [Condition Variables APIs](group__condvar__apis.md) |  |
| [Event APIs](group__event__apis.md) |  |
| [FIFO APIs](group__fifo__apis.md) |  |
| [FUTEX APIs](group__futex__apis.md) |  |
| [Fatal error APIs](group__fatal__apis.md) |  |
| [Fatal error base types](group__fatal__types.md) |  |
| [Floating Point APIs](group__float__apis.md) |  |
| [Heap APIs](group__heap__apis.md) | Memory allocation from the Heap |
| [Interrupt Service Routine APIs](group__isr__apis.md) |  |
| [Kernel Memory Management](group__kernel__memory__management.md) | Kernel Memory Management |
| [Demand Paging](group__demand__paging.md) |  |
| [Backing Store APIs](group__mem-demand-paging-backing-store.md) | Backing store APIs |
| [Demand Paging APIs](group__mem-demand-paging.md) |  |
| [Eviction Algorithm APIs](group__mem-demand-paging-eviction.md) | Eviction algorithm APIs |
| [LIFO APIs](group__lifo__apis.md) |  |
| [Mailbox APIs](group__mailbox__apis.md) |  |
| [Memory Slab APIs](group__mem__slab__apis.md) |  |
| [Memory domain APIs](group__mem__domain__apis.md) |  |
| [Application memory domain APIs](group__mem__domain__apis__app.md) | Application memory domain APIs |
| [Message Queue APIs](group__msgq__apis.md) |  |
| [Mutex APIs](group__mutex__apis.md) |  |
| [Object Core APIs](group__obj__core__apis.md) |  |
| [Object Core Statistics APIs](group__obj__core__stats__apis.md) |  |
| [Pipe APIs](group__pipe__apis.md) |  |
| [Queue APIs](group__queue__apis.md) |  |
| [Semaphore APIs](group__semaphore__apis.md) |  |
| [Spinlock APIs](group__spinlock__apis.md) | Spinlock APIs |
| [Stack APIs](group__stack__apis.md) |  |
| [System Clock APIs](group__clock__apis.md) | System Clock APIs |
| [Thread APIs](group__thread__apis.md) |  |
| [Thread Stack APIs](group__thread__stack__api.md) | Thread Stack APIs |
| [Timer APIs](group__timer__apis.md) |  |
| [User Mode APIs](group__usermode__apis.md) |  |
| [User mode mutex APIs](group__user__mutex__apis.md) |  |
| [User mode semaphore APIs](group__user__semaphore__apis.md) |  |
| [Version APIs](group__version__apis.md) | Kernel Version APIs |
| [Work Queue APIs](group__workqueue__apis.md) |  |
| [Memory Management APIs](group__mem__mgmt.md) | Memory Management APIs |
| [Memory Attribute Interface](group__memory__attr__interface.md) | Memory Attribute Interface |
| [Memory heaps based on memory attributes](group__memory__attr__heap.md) | Memory heaps based on memory attributes |
| [Operating System Services](group__os__services.md) | Operating System Services |
| [Asynchronous Notification APIs](group__sys__notify__apis.md) |  |
| [Bindesc Define](group__bindesc__define.md) | Binary Descriptor Definition |
| [Bindesc Read](group__bindesc__read.md) | Reading Binary Descriptors of other images |
| [Cache Interface](group__cache__interface.md) |  |
| [Checksum](group__checksum.md) |  |
| [CRC](group__crc.md) |  |
| [Console API](group__console__api.md) | Console API |
| [Crypto](group__crypto.md) | Crypto APIs |
| [Cipher](group__crypto__cipher.md) | Crypto Cipher APIs |
| [Hash](group__crypto__hash.md) | Crypto Hash APIs |
| [Random Function APIs](group__random__api.md) | Random Function APIs |
| [Debug](group__debug.md) | Debug Services |
| [CPU load monitor](group__cpu__load.md) | Module for monitoring CPU Load |
| [Coredump APIs](group__coredump__apis.md) | Coredump APIs |
| [Coresight APIs](group__coresight__apis.md) |  |
| [Coresight Trace Deformatter](group__cs__trace__defmt.md) |  |
| [STP Decoder API](group__mipi__stp__decoder__apis.md) |  |
| [Symbol Table API](group__symtab__apis.md) |  |
| [Thread analyzer](group__thread__analyzer.md) | Module for analyzing threads |
| [File System APIs](group__file__system__api.md) | File System APIs |
| [File System Storage](group__file__system__storage.md) |  |
| [Flash Circular Buffer (FCB)](group__fcb.md) |  |
| [Flash Circular Buffer Data Structures](group__fcb__data__structures.md) |  |
| [fcb API](group__fcb__api.md) | Flash Circular Buffer APIs |
| [fcb non-API prototypes](group__fcb__internal.md) | Flash Circular internal |
| [Non-volatile Storage (NVS)](group__nvs.md) | Non-volatile Storage (NVS) |
| [Non-volatile Storage APIs](group__nvs__high__level__api.md) | Non-volatile Storage APIs |
| [Non-volatile Storage Data Structures](group__nvs__data__structures.md) | Non-volatile Storage Data Structures |
| [Settings](group__settings.md) |  |
| [Settings backend interface](group__settings__backend.md) | Settings |
| [Settings name processing](group__settings__name__proc.md) | API for const name processing |
| [Settings subsystem runtime](group__settings__rt.md) | API for runtime settings |
| [Zephyr Memory Storage (ZMS)](group__zms.md) |  |
| [ZMS API](group__zms__high__level__api.md) |  |
| [ZMS data structures](group__zms__data__structures.md) |  |
| [Flash image API](group__flash__img__api.md) | Abstraction layer to write firmware images to flash |
| [Heap Management](group__heaps.md) | Heap Management |
| [Heap Listener APIs](group__heap__listener__apis.md) |  |
| [Low Level Heap Allocator](group__low__level__heap__allocator.md) |  |
| [Multi-Heap Wrapper](group__multi__heap__wrapper.md) |  |
| [Shared multi-heap interface](group__shared__multi__heap.md) | Shared Multi-Heap (SMH) interface |
| [IPC](group__ipc.md) | IPC |
| [IPC service APIs](group__ipc__service__api.md) | IPC Service API |
| [IPC service RPMsg API](group__ipc__service__rpmsg__api.md) | IPC service RPMsg API |
| [IPC service backend](group__ipc__service__backend.md) | IPC service backend |
| [IPC service static VRINGs API](group__ipc__service__static__vrings__api.md) | IPC service static VRINGs API |
| [Icmsg IPC library API](group__ipc__icmsg__api.md) | Icmsg IPC library API |
| [Icmsg multi-endpoint IPC library API](group__ipc__icmsg__me__api.md) | Multi-endpoint extension of icmsg IPC library |
| [Packed Buffer API](group__pbuf.md) | Packed buffer API |
| [RPMsg service APIs](group__rpmsg__service__api.md) | RPMsg service API |
| [Iterable Sections APIs](group__iterable__section__apis.md) | Iterable Sections APIs |
| [Linkable loadable extensions](group__llext__apis.md) |  |
| [ELF constants and data types](group__llext__elf.md) |  |
| [ELF inspection APIs](group__llext__inspect__apis.md) |  |
| [ELF loader context](group__llext__loader__apis.md) |  |
| [Exported symbol definitions](group__llext__symbols.md) |  |
| [Logging](group__logging.md) | Logging |
| [Logger system](group__logger.md) | Logger |
| [Log link API](group__log__link.md) | Log link API |
| [Log message API](group__log__msg.md) | Log message API |
| [Log output API](group__log__output.md) | Log output API |
| [Log output formatting flags.](group__LOG__OUTPUT__FLAGS.md) |  |
| [Logger backend interface](group__log__backend.md) | Logger backend interface |
| [Logger multidomain backend helpers](group__log__backend__multidomain.md) | Logger multidomain backend helpers |
| [MQTT log backend API](group__log__backend__mqtt.md) | MQTT log backend API |
| [Logger backend standard interface](group__log__backend__std.md) | Logger backend interface for forwarding to standard backend |
| [Logger control API](group__log__ctrl.md) | Logger control API |
| [Logging API](group__log__api.md) | Logger API |
| [Trace and Debug Domain APIs](group__log__frontend__stmesp__apis.md) |  |
| [Logging frontend STMESP Demultiplexer API](group__log__frontend__stpesp__demux__apis.md) |  |
| [MCUmgr](group__mcumgr.md) |  |
| [MCUmgr callback API](group__mcumgr__callback__api.md) | MCUmgr callback API |
| [MCUmgr enum\_mgmt callback API](group__mcumgr__callback__api__enum__mgmt.md) | MCUmgr enum\_mgmt callback API |
| [MCUmgr fs\_mgmt callback API](group__mcumgr__callback__api__fs__mgmt.md) | MCUmgr fs\_mgmt callback API |
| [MCUmgr img\_mgmt callback API](group__mcumgr__callback__api__img__mgmt.md) | MCUmgr img\_mgmt callback API |
| [MCUmgr os\_mgmt callback API](group__mcumgr__callback__api__os__mgmt.md) | MCUmgr os\_mgmt callback API |
| [MCUmgr settings\_mgmt callback API](group__mcumgr__callback__api__settings__mgmt.md) | MCUmgr settings\_mgmt callback API |
| [MCUmgr enum\_mgmt API](group__mcumgr__enum__mgmt.md) | MCUmgr enum\_mgmt API |
| [MCUmgr handler API](group__mcumgr__handler__api.md) | MCUmgr handler registration API |
| [MCUmgr img\_mgmt API](group__mcumgr__img__mgmt.md) | MCUmgr img\_mgmt API |
| [MCUmgr img\_mgmt\_client API](group__mcumgr__img__mgmt__client.md) | MCUmgr Image management client API |
| [MCUmgr mgmt API](group__mcumgr__mgmt__api.md) | MCUmgr mgmt API |
| [MCUmgr os\_mgmt\_client API](group__mcumgr__os__mgmt__client.md) | MCUmgr OS management client API |
| [MCUmgr transport SMP API](group__mcumgr__transport__smp.md) | MCUmgr transport SMP API |
| [SMP client API](group__mcumgr__smp__client.md) | MCUmgr SMP client API |
| [Memory Management](group__memory__management.md) | Memory Management |
| [Memory Banks Driver APIs](group__mm__drv__bank__apis.md) | Memory Banks Driver APIs |
| [Memory Blocks APIs](group__mem__blocks__apis.md) |  |
| [Memory Management Driver APIs](group__mm__drv__apis.md) | Memory Management Driver APIs |
| [Network Buffer Library](group__net__buf.md) | Network buffer library |
| [On-Off Service APIs](group__resource__mgmt__onoff__apis.md) |  |
| [PSA Secure Storage API](group__psa__secure__storage.md) |  |
| [Power Management (PM)](group__subsys__pm.md) | System and device power management |
| [CPU Power Management](group__power__management__cpu__api.md) |  |
| [Device](group__subsys__pm__device.md) | Device Power Management API |
| [Device Runtime](group__subsys__pm__device__runtime.md) | Device Runtime Power Management API |
| [S2RAM APIs](group__pm__s2ram.md) |  |
| [States](group__subsys__pm__states.md) | System Power Management States |
| [System](group__subsys__pm__sys.md) | System Power Management API |
| [Hooks](group__subsys__pm__sys__hooks.md) | System Power Management Hooks |
| [Policy](group__subsys__pm__sys__policy.md) | System Power Management Policy API |
| [RTIO](group__rtio.md) | RTIO |
| [RTIO CQE Flags](group__rtio__cqe__flags.md) | RTIO CQE Flags |
| [RTIO Priorities](group__rtio__sqe__prio.md) | RTIO Predefined Priorities |
| [RTIO SQE Flags](group__rtio__sqe__flags.md) | RTIO SQE Flags |
| [Retention API](group__retention__api.md) | Retention API |
| [Boot mode interface](group__boot__mode__interface.md) | Boot mode interface |
| [Bootloader info interface](group__bootloader__info__interface.md) | Bootloader info interface |
| [Semihosting APIs](group__semihost.md) |  |
| [Shell API](group__shell__api.md) | Shell API |
| [State Machine Framework API](group__smf.md) | State Machine Framework API |
| [Storage APIs](group__storage__apis.md) | Storage APIs |
| [Disk Access Interface](group__disk__access__interface.md) | Disk Access APIs |
| [Stream to flash interface](group__stream__flash.md) | Abstraction over stream writes to flash |
| [flash area Interface](group__flash__area__api.md) | Abstraction over flash partitions/areas and their drivers |
| [System Initialization](group__sys__init.md) | Zephyr offers an infrastructure to call initialization code before main |
| [System power off](group__sys__poweroff.md) |  |
| [Task Watchdog APIs](group__task__wdt__api.md) | Task Watchdog APIs |
| [Timing Measurement APIs](group__timing__api.md) | Timing Measurement APIs |
| [Arch specific Timing Measurement APIs](group__timing__api__arch.md) | Arch specific Timing Measurement APIs |
| [Board specific Timing Measurement APIs](group__timing__api__board.md) | Board specific Timing Measurement APIs |
| [SoC specific Timing Measurement APIs](group__timing__api__soc.md) | SoC specific Timing Measurement APIs |
| [Tracing](group__subsys__tracing.md) | Tracing |
| [Object tracking](group__subsys__tracing__object__tracking.md) | Object tracking |
| [Tracing APIs](group__subsys__tracing__apis.md) | Tracing APIs |
| [Conditional Variable Tracing APIs](group__subsys__tracing__apis__condvar.md) | Conditional Variable Tracing APIs |
| [Event Tracing APIs](group__subsys__tracing__apis__event.md) | Event Tracing APIs |
| [FIFO Tracing APIs](group__subsys__tracing__apis__fifo.md) | FIFO Tracing APIs |
| [GPIO Tracing APIs](group__subsys__tracing__apis__gpio.md) | GPIO Tracing APIs |
| [Heap Tracing APIs](group__subsys__tracing__apis__heap.md) | Heap Tracing APIs |
| [LIFO Tracing APIs](group__subsys__tracing__apis__lifo.md) | LIFO Tracing APIs |
| [Mailbox Tracing APIs](group__subsys__tracing__apis__mbox.md) | Mailbox Tracing APIs |
| [Memory Slab Tracing APIs](group__subsys__tracing__apis__mslab.md) | Memory Slab Tracing APIs |
| [Message Queue Tracing APIs](group__subsys__tracing__apis__msgq.md) | Message Queue Tracing APIs |
| [Mutex Tracing APIs](group__subsys__tracing__apis__mutex.md) | Mutex Tracing APIs |
| [Named tracing APIs](group__subsys__tracing__apis__named.md) | Named Tracing APIs |
| [Network Core Tracing APIs](group__subsys__tracing__apis__net.md) | Network Core Tracing APIs |
| [Network Socket Tracing APIs](group__subsys__tracing__apis__socket.md) | Network Socket Tracing APIs |
| [PM Device Runtime Tracing APIs](group__subsys__tracing__apis__pm__device__runtime.md) | PM Device Runtime Tracing APIs |
| [Pipe Tracing APIs](group__subsys__tracing__apis__pipe.md) | Pipe Tracing APIs |
| [Poll Tracing APIs](group__subsys__tracing__apis__poll.md) | Poll Tracing APIs |
| [Queue Tracing APIs](group__subsys__tracing__apis__queue.md) | Queue Tracing APIs |
| [Semaphore Tracing APIs](group__subsys__tracing__apis__sem.md) | Semaphore Tracing APIs |
| [Stack Tracing APIs](group__subsys__tracing__apis__stack.md) | Stack Tracing APIs |
| [Syscall Tracing APIs](group__subsys__tracing__apis__syscall.md) | Syscall Tracing APIs |
| [System PM Tracing APIs](group__subsys__tracing__apis__pm__system.md) | System PM Tracing APIs |
| [Thread Tracing APIs](group__subsys__tracing__apis__thread.md) | Thread Tracing APIs |
| [Timer Tracing APIs](group__subsys__tracing__apis__timer.md) | Timer Tracing APIs |
| [Work Delayable Tracing APIs](group__subsys__tracing__apis__work__delayable.md) | Work Delayable Tracing APIs |
| [Work Poll Tracing APIs](group__subsys__tracing__apis__work__poll.md) | Work Poll Tracing APIs |
| [Work Queue Tracing APIs](group__subsys__tracing__apis__work__q.md) | Work Queue Tracing APIs |
| [Work Tracing APIs](group__subsys__tracing__apis__work.md) | Work Tracing APIs |
| [Tracing format APIs](group__subsys__tracing__format__apis.md) | Tracing format APIs |
| [Tracing utility macros](group__subsys__tracing__macros.md) | Tracing utility macros |
| [Zbus APIs](group__zbus__apis.md) | Zbus API |
| [Sensing](group__sensing.md) |  |
| [Data Types](group__sensing__datatypes.md) | Data Types |
| [Sensing Sensor API](group__sensing__sensor.md) | Sensing Sensor API |
| [Sensor Callbacks](group__sensing__sensor__callbacks.md) |  |
| [Sensing Subsystem API](group__sensing__api.md) | Sensing Subsystem API |
| [Sensor Types](group__sensing__sensor__types.md) | Sensor Types Definition |
| [Testing](group__testing.md) | Testing |
| [Emulator interface](group__io__emulators.md) | Emulators used to test drivers and higher-level code that uses them |
| [I2C Emulation Interface](group__i2c__emul__interface.md) | I2C Emulation Interface |
| [MSPI Emulation Interface](group__mspi__emul__interface.md) | MSPI Emulation Interface |
| [SPI Emulation Interface](group__spi__emul__interface.md) | SPI Emulation Interface |
| [UART Emulation Interface](group__uart__emul__interface.md) | UART Emulation Interface |
| [eSPI Emulation Interface](group__espi__emul__interface.md) | ESPI Emulation Interface |
| [FFF extensions](group__fff__extensions.md) | This module provides extensions to FFF for simplifying the configuration and usage of fakes |
| [Zephyr Testing Framework (ZTest)](group__ztest.md) |  |
| [Ztest assertion macros](group__ztest__assert.md) | This module provides assertions when using Ztest |
| [Ztest assumption macros](group__ztest__assume.md) | This module provides assumptions when using Ztest |
| [Ztest expectation macros](group__ztest__expect.md) | This module provides expectations when using Ztest |
| [Ztest mocking support](group__ztest__mock.md) | This module provides simple mocking functions for unit testing |
| [Ztest testing macros](group__ztest__test.md) | This module eases the testing process by providing helpful macros and other testing structures |
| [Ztest ztress macros](group__ztest__ztress.md) | This module provides test stress when using Ztest |
| [Third-party](group__third__party.md) | APIs to interact with third-party services or applications |
| [BBC micro:bit display APIs](group__mb__display.md) | BBC micro:bit display APIs |
| [Grove display APIs](group__grove__display.md) | Grove display APIs |
| [MCUboot image control API](group__mcuboot__api.md) | MCUboot public API for MCUboot control of image boot process |
| [UpdateHub Firmware Over-the-Air](group__updatehub.md) | UpdateHub Firmware Over-the-Air for Zephyr Project |
| [hawkBit Firmware Over-the-Air](group__hawkbit.md) | HawkBit Firmware Over-the-Air for Zephyr Project |
| [hawkBit autohandler API](group__hawkbit__autohandler.md) | HawkBit autohandler API |
| [hawkBit configuration API](group__hawkbit__config.md) | HawkBit configuration API |
| [hawkBit event API](group__hawkbit__event.md) | HawkBit event API |
| [Utilities](group__utilities.md) | Utilities |
| [Base64](group__base64.md) | Base64 encoding/decoding functions |
| [COBS (Consistent Overhead Byte Stuffing)](group__cobs.md) | COBS encoding and decoding functions with custom delimiter support |
| [DSP (Digital Signal Processing)](group__math__dsp.md) | Digital Signal Processing (DSP) math functions and utilities |
| [Basic Math Functions](group__math__dsp__basic.md) | Basic element-wise math operations for DSP |
| [Vector Absolute Value](group__math__dsp__basic__abs.md) | Computes the absolute value of a vector on an element-by-element basis |
| [Vector Addition](group__math__dsp__basic__add.md) | Element-by-element addition of two vectors |
| [Vector Clipping](group__math__dsp__basic__clip.md) | Element-by-element clipping of a value |
| [Vector Dot Product](group__math__dsp__basic__dot.md) | Computes the dot product of two vectors |
| [Vector Multiplication](group__math__dsp__basic__mult.md) | Element-by-element multiplication of two vectors |
| [Vector Negate](group__math__dsp__basic__negate.md) | Negates the elements of a vector |
| [Vector Offset](group__math__dsp__basic__offset.md) | Adds a constant offset to each element of a vector |
| [Vector Scale](group__math__dsp__basic__scale.md) | Multiply a vector by a scalar value |
| [Vector Shift](group__math__dsp__basic__shift.md) | Shifts the elements of a fixed-point vector by a specified number of bits |
| [Vector Subtraction](group__math__dsp__basic__sub.md) | Element-by-element subtraction of two vectors |
| [Vector bitwise AND](group__math__dsp__basic__and.md) | Compute the logical bitwise AND |
| [Vector bitwise NOT](group__math__dsp__basic__not.md) | Compute the logical bitwise NOT |
| [Vector bitwise OR](group__math__dsp__basic__or.md) | Compute the logical bitwise OR |
| [Vector bitwise XOR](group__math__dsp__basic__xor.md) | Compute the logical bitwise XOR |
| [Float/Fixed point shift conversion functions](group__math__dsp__utils__shifts.md) | Convert number representation in Float or Double to/from Q31/Q15/Q7 |
| [Fixed to Float point conversions](group__math__dsp__basic__conv__to__float.md) | Convert number Q7/Q15/Q31 to Float or Double representation with shift |
| [Float to Fixed point conversions](group__math__dsp__basic__conv__to__fixed.md) | Convert number representation in Float or Double to Q31/Q15/Q7 |
| [Helper macros for printing Q values.](group__math__printing.md) | Extends the existing inttypes headers for print formatting |
| [Data Structure APIs](group__datastructure__apis.md) |  |
| [Balanced Red/Black Tree](group__rbtree__apis.md) | Balanced Red/Black Tree implementation |
| [Bit array](group__bitarray__apis.md) | Store and manipulate bits in a bit array |
| [Doubly-linked list](group__doubly-linked-list__apis.md) | Doubly-linked list implementation |
| [Flagged Single-linked list](group__flagged-single-linked-list__apis.md) | Flagged single-linked list implementation |
| [Hashmap](group__hashmap__apis.md) | Hashmap (Hash Table) API |
| [Hash Functions](group__hash__functions.md) |  |
| [Hashmap Implementations](group__hashmap__implementations.md) |  |
| [MPSC (Multi producer, single consumer) packet buffer API](group__mpsc__buf.md) | Multi producer, single consumer packet buffer API |
| [MPSC (Multi producer, single consumer) packet header](group__mpsc__packet.md) | Multi producer, single consumer packet header |
| [MPSC packet buffer flags](group__MPSC__PBUF__FLAGS.md) |  |
| [MPSC Lockfree Queue API](group__mpsc__lockfree.md) | Multiple Producer Single Consumer (MPSC) Lockfree Queue API |
| [Min-Heap service](group__min__heap__apis.md) | Min\_heap |
| [Ring Buffer APIs](group__ring__buffer__apis.md) | Simple ring buffer implementation |
| [SPSC (Single producer, single consumer) packet buffer API](group__spsc__buf.md) | Single producer, single consumer packet buffer API |
| [SPSC packet buffer flags](group__SPSC__PBUF__FLAGS.md) |  |
| [SPSC API](group__spsc__lockfree.md) | Single Producer Single Consumer (SPSC) Lockfree Queue API |
| [Single-linked list](group__single-linked-list__apis.md) | Single-linked list implementation |
| [Formatted Output APIs](group__cbprintf__apis.md) |  |
| [Package convert flags](group__CBPRINTF__PACKAGE__CONVERT__FLAGS.md) |  |
| [Package flags](group__CBPRINTF__PACKAGE__FLAGS.md) |  |
| [JSON](group__json.md) |  |
| [JSON Web Token (JWT)](group__jwt.md) | JSON Web Token (JWT) - RFC 7519 |
| [Linear Range](group__linear__range.md) | The linear range API maps values in a linear range to a range index |
| [Math Ilog2 Functions](group__math__ilog2.md) | Integer log2 utilities for mathematical operations |
| [Math Interpolation Functions](group__math__interpolation.md) | Linear interpolation utilities for mathematical operations |
| [Math extras](group__math__extras.md) | Extra arithmetic and bit manipulation functions |
| [Monochrome Character Framebuffer](group__monochrome__character__framebuffer.md) | Public Monochrome Character Framebuffer API |
| [Navigation](group__navigation.md) | Navigation utilities |
| [Time Utility APIs](group__timeutil__apis.md) |  |
| [Time Representation APIs](group__timeutil__repr__apis.md) |  |
| [Time Synchronization APIs](group__timeutil__sync__apis.md) |  |
| [Time Units Helpers](group__timeutil__unit__apis.md) | Various helper APIs for converting between time units |
| [Timespec Utility APIs](group__timeutil__timespec__apis.md) |  |
| [UUID](group__uuid.md) |  |
| [Utility Functions](group__sys-util.md) |  |

- Generated on  for Zephyr API Documentation by [![doxygen](doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
